[project]
name = "sentiment-analysis-using-n-grams"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.6",
    "nltk>=3.9.1",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "spacy>=3.8.7",
    "torch>=2.8.0",
    "torchtext>=0.18.0",
    "torchvision>=0.23.0",
]
